# cpu-info

./: .editorconfig  .gitignore  .travis.yml  CLAUDE.md  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  renovate.json  settings.gradle.kts  strings.xml  versioning.gradle  ‎.editorconfig‎
.github/: PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android_release.yml  build_and_test.yml  build_release.yml  desktop_release.yml  ios_release.yml  mac_release.yml  shared_test.yml  wear_release.yml
androidApp/: build.gradle.kts  debug.keystore  proguard-rules.pro
androidApp/baselineprofile/: build.gradle.kts
app/: .gitignore  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
baselineprofile/: build.gradle.kts
baselineprofile/profiles/: BaselineProfileGenerator_generate-startup-prof.txt
buildSrc/: build.gradle.kts
desktopApp/: build.gradle.kts  entitlements.plist  rules.pro  runtime-entitlements.plist
desktopApp/desktop-icons/: icon-mac.icns
fastlane/: Fastfile
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: LaunchScreen.storyboard  README.md
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift  (+5 more)
kotlin-js-store/: package-lock.json
native-android/: build.gradle.kts
reports/: jacoco.gradle
shared/: build.gradle.kts
shared/src/androidMain/cpp/: CMakeLists.txt
spotless/: copyright.kt
wearOsApp/: build.gradle.kts  proguard-rules.pro
webApp/: build.gradle.kts
(+1043 files in other folders)
